2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Largelly improved the
	gnomemeeting_addressbook_edit_addressbook_dialog_run function:
	- the title is now correct
	- unnecessary fields are hidden when add/editing an address book
	following we are adding, editing it, and following if it is a local
	or remote address book
	- added checks to make sure there are no missing fields

2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Added right-click menu for the address
	books.

2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Changed column size to dynamic.

2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp: Fixed invalid UTF-8 problems
	with ILS. Thanks to Johnny for reporting this.

2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Select the first local or remote address
	book when deleting an address book.

2004-10-03  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Cleanups.

2004-10-02  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Fixed toolbar annoyance reported by Josep.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp: Fixed search filter for ILS.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* src/stunclient.cpp: Improved NAT detection message.

	* src/main_window.cpp: Made icons bigger in the toolbar, reported
	by Josep and Kilian. Thanks!

	* NEWS: Update with CVS news.

	* configure.in: New version.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* src/druid.cpp, src/stunclient.cpp, src/stunclient.h: Added NAT
	configuration assistant.

2004-09-30  Damien Sandras  <dsandras@gnome.org>

	* po/POTFILES.in: Added src/stunclient.* to POTFILES.in.

	* src/Makefile.am: Added src/stunclient.* to the build.

	* src/config.cpp: Changed to "apply" type of setting for
	the STUN server.
