@@ -1,5 +1,10 @@
 2004-10-03  Damien Sandras  <dsandras@gnome.org>
 
+	* src/endpoint.cpp: Use ngettext to display the number of missed
+	calls.
+
+2004-10-03  Damien Sandras  <dsandras@gnome.org>
+
 	* src/addressbook_window.cpp: Largelly improved the
 	gnomemeeting_addressbook_edit_addressbook_dialog_run function:
 	- the title is now correct
